Update config.ini comment.

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -600,11 +600,15 @@ username_hint = username_only_letters_numbers_and_basic_punctuation
 ; Default is true.
 ;delete_ratings_with_user = false
 
-; "Remember me" functionality for listed login methods. If the user chooses to save the login,
-; a login token cookie and a database entry will be created. Users' browser information will be 
-; stored and browser detection is handled by get_browser(), so make sure to have a recent
-; browscap.ini file configured in PHP. The implementation is based on Improved Persistent
-; Login Cookie Best Practice, see https://gist.github.com/oleg-andreyev/9dcef18ca3687e12a071648c1abff782
+; "Remember me" functionality for listed login methods. If the user chooses to save
+; the login, a login token cookie and a database entry will be created.
+; The implementation is based on Improved Persistent Login Cookie Best Practice, see
+; https://gist.github.com/oleg-andreyev/9dcef18ca3687e12a071648c1abff782
+; User's browser information is stored with the login token. This requires an up to
+; date browscap cache. The browscap cache can be updated in the Maintenance section
+; of the admin UI or by using the util/browscap command line utility. In both cases
+; it is vital that the web server user has read access to the cache, and the utility
+; used to update it has write access to it.
 ;persistent_login = "database,multiils"
 
 ; Persistent login token lifetime in days
