Update config.ini comment.

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -606,9 +606,9 @@ username_hint = username_only_letters_numbers_and_basic_punctuation
 ; https://gist.github.com/oleg-andreyev/9dcef18ca3687e12a071648c1abff782
 ; User's browser information is stored with the login token. This requires an up to
 ; date browscap cache. The browscap cache can be updated in the Maintenance section
-; of the admin UI or by using the util/browscap command line utility. In both cases
-; it is vital that the web server user has read access to the cache, and the utility
-; used to update it has write access to it.
+; of the admin UI or by using the util/browscap command line utility. If you use the
+; command line utility, you will need to ensure that the user of the web server has
+; read and write access to the cache directory and its contents as well.
 ;persistent_login = "database,multiils"
 
 ; Persistent login token lifetime in days
