--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,13 @@
         "php": ">=8.1",
         "ahand/mobileesp": "dev-master",
         "apereo/phpcas": "1.6.1",
+        "browscap/browscap-php": "^7.2",
         "cap60552/php-sip2": "1.0.0",
         "colinmollenhour/credis": "1.15.0",
         "composer/package-versions-deprecated": "1.11.99.5",
         "composer/semver": "3.4.0",
         "endroid/qr-code": "4.8.2",
+        "guzzlehttp/guzzle": "7.8.1",
         "laminas/laminas-cache": "3.10.1",
         "laminas/laminas-cache-storage-adapter-blackhole": "^2.0",
         "laminas/laminas-cache-storage-adapter-filesystem": "^2.0",
