--- a/config/vufind/MyResearchMenu.ini
+++ b/config/vufind/MyResearchMenu.ini
@@ -1,4 +1,16 @@
-; Optional configuration for user account menu
+; Optional configuration for user account menu. If there are no items, or this file is even not used. VuFind uses
+; default settings - which is same as you can see below.
+; The format of this configuration is as follows:
+; config key is a name of an item
+; array keys for every menu item could be:
+;   - label: the text shown as link, will be translated
+;   - route: route name used to generate link target
+;   - icon: icon used for the item, has to be defined in theme config
+;   - ilsCapability: the name of ILS function used as condition whether to show the item. Is subject of
+;     ILS\Connection::checkCapability method
+;   - ilsFunction: the name of ILS function used as condition whether to show the item. Is subject of
+;     ILS\Connection::checkFunction method
+;   - status: whether to show status label
 [MenuItems]
 favorites[label] = 'Favorites'
 favorites[route] = 'myresearch-favorites'
