adding recursive replaced sections to yaml reader

--- a/module/VuFind/tests/fixtures/configs/yaml/config/vufind/yamlreader-child.yaml
+++ b/module/VuFind/tests/fixtures/configs/yaml/config/vufind/yamlreader-child.yaml
@@ -2,6 +2,8 @@
 "@merge_sections":
   - [Other, Merged]
   - [Other, ParentOnly]
+"@recursive_replaced_sections":
+  - [Other, Replaced]
 
 Overridden:
   Original: Not so original
@@ -12,6 +14,9 @@ Other:
     Child:
       - Foo
       - Baz
+  Replaced:
+    Original: Replaces parent
+    ChildOnly: From child
   NonMerged:
     Original: Not so original either
 ChildOnly:
