--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ module/VuFind/tests/.phpunit*
 node_modules
 package-lock.json
 public/swagger-ui
+tests/phpcs.cache.json
 local/DirLocations.ini
 local/config/vufind/*.ini
 local/config/vufind/*.json
