Use Koha REST API endpoint to pull recalls into patron holds page
NOTE: This depends on Bug 36075 to be pushed to Koha

https://bugs.koha-community.org/bugzilla3/show_bug.cgi?id=36075

--- a/config/vufind/KohaRest.ini
+++ b/config/vufind/KohaRest.ini
@@ -47,6 +47,8 @@ host = "http://koha-server/api"
 ; - updatecharges
 ;   - payout
 ;   - remaining_permissions
+; - recalls
+;   - manage_recalls
 ;
 ; Add an API key to the user and copy the values for Client ID and Secret below.
 ; To add an API key in Koha, go to the patron screen and click More -> Manage API
@@ -127,6 +129,11 @@ updateFields = frozen:frozenThrough:pickUpLocation
 
 ; This section controls article request behavior. To enable, uncomment (at minimum)
 ; the HMACKeys and extraFields settings below.
+
+; Uncomment the following like to enable recalls (disabled by default). Requires a
+; Koha version that includes
+; https://bugs.koha-community.org/bugzilla3/show_bug.cgi?id=36075
+;enableRecalls = true
 [StorageRetrievalRequests]
 ; Whether to allow article requests on checked out items. Default is false.
 ;allow_checked_out = true
