--- a/config/vufind/AccountMenu.ini
+++ b/config/vufind/AccountMenu.ini
@@ -1,5 +1,5 @@
-; Optional configuration for user account menu. If there are no items, or this file is even not used. VuFind uses
-; default settings - which is same as you can see below.
+; If there are no items, or this file is even not used. VuFind uses default settings - which is same as you can see
+; below.
 ; The format of this configuration is as follows:
 ; config key is a name of an item
 ; array keys for every menu item could be:
