Better documentation, fix template to make icon optional

--- a/config/vufind/AccountMenu.ini
+++ b/config/vufind/AccountMenu.ini
@@ -3,14 +3,14 @@
 ; The format of this configuration is as follows:
 ; config key is a name of an item
 ; array keys for every menu item could be:
-;   - label: the text shown as link, will be translated
-;   - route: route name used to generate link target
+;   - label: the text shown as link, will be translated - reguired
+;   - route: route name used to generate link target - required
 ;   - icon: icon used for the item, has to be defined in theme config
 ;   - ilsCapability: the name of ILS function used as condition whether to show the item. Is subject of
 ;     ILS\Connection::checkCapability method
 ;   - ilsFunction: the name of ILS function used as condition whether to show the item. Is subject of
 ;     ILS\Connection::checkFunction method
-;   - status: whether to show status label
+;   - status: whether to show status label, defaults to false
 [MenuItems]
 favorites[label] = 'Favorites'
 favorites[route] = 'myresearch-favorites'
