Add "composer fix" to run php-cs-fixer and phpcbf.
Includes a change to phpcbf to run it with the output of phpcs, because phpcs is much faster with the cache.

--- a/composer.json
+++ b/composer.json
@@ -126,6 +126,7 @@
         }
     },
     "scripts": {
+        "fix": "phing fix-php",
         "phing-install-dependencies": ["phing patch-dependencies", "phing installsolr installswaggerui"],
         "post-install-cmd": "@phing-install-dependencies",
         "post-update-cmd": "@phing-install-dependencies",
