Add view helper

--- a/config/vufind/AccountMenu.ini
+++ b/config/vufind/AccountMenu.ini
@@ -3,52 +3,52 @@
 ; The format of this configuration is as follows:
 ; config key is a name of an item
 ; array keys for every menu item could be:
-;   - label: the text shown as link, will be translated - reguired
+;   - label: the text shown as link, will be translated - required
 ;   - route: route name used to generate link target - required
 ;   - icon: icon used for the item, has to be defined in theme config
-;   - ilsCapability: the name of ILS function used as condition whether to show the item. Is subject of
-;     ILS\Connection::checkCapability method
-;   - ilsFunction: the name of ILS function used as condition whether to show the item. Is subject of
-;     ILS\Connection::checkFunction method
+;   - checkMethod: the name of view helper AccountMenu method to perform a check whether to show the item
 ;   - status: whether to show status label, defaults to false
+;   - iconMethod: method to dynamically create the icon name
 [MenuItems]
 favorites[label] = 'Favorites'
 favorites[route] = 'myresearch-favorites'
 favorites[icon] = 'user-favorites'
+favorites[checkMethod] = 'checkFavorites'
 
 checkedout[label] = 'Checked Out Items'
 checkedout[route] = 'myresearch-checkedout'
-checkedout[ilsCapability] = 'getMyTransactions'
 checkedout[icon] = 'user-checked-out'
 checkedout[status] = true
+checkedout[checkMethod] = 'checkCheckedout'
 
 historicloans[label] = 'Loan History'
 historicloans[route] = 'checkouts-history'
-historicloans[ilsFunction] = 'getMyTransactionHistory'
 historicloans[icon] = 'user-loan-history'
+historicloans[checkMethod] = 'checkHistoricloans'
 
 holds[label] = 'Holds and Recalls'
 holds[route] = 'holds-list'
-holds[ilsCapability] = 'getMyHolds'
 holds[icon] = 'user-holds'
 holds[status] = true
+holds[checkMethod] = 'checkHolds'
 
 storageRetrievalRequests[label] = 'Storage Retrieval Requests'
 storageRetrievalRequests[route] = 'myresearch-storageretrievalrequests'
-storageRetrievalRequests[ilsFunction] = 'StorageRetrievalRequests'
 storageRetrievalRequests[icon] = 'user-storage-retrievals'
 storageRetrievalRequests[status] = true
+storageRetrievalRequests[checkMethod] = 'checkStorageRetrievalRequests'
 
 ILLRequests[label] = 'Interlibrary Loan Requests'
 ILLRequests[route] = 'myresearch-illrequests'
-ILLRequests[ilsFunction] = 'ILLRequests'
 ILLRequests[icon] = 'user-ill-requests'
 ILLRequests[status] = true
+ILLRequests[checkMethod] = 'checkILLRequests'
 
 fines[label] = 'Fines'
 fines[route] = 'myresearch-fines'
-fines[ilsCapability] = 'getMyFines'
 fines[status] = true
+fines[checkMethod] = 'checkFines'
+fines[iconMethod] = 'finesIcon'
 
 profile[label] = 'Profile'
 profile[route] = 'myresearch-profile'
@@ -57,15 +57,19 @@ profile[icon] = 'profile'
 librarycards[label] = 'Library Cards'
 librarycards[route] = 'librarycards-home'
 librarycards[icon] = 'barcode'
+librarycards[checkMethod] = 'checkLibraryCards'
 
 dgcontent[label] = 'Overdrive Content'
 dgcontent[route] = 'overdrive-mycontent'
 dgcontent[icon] = 'overdrive'
+dgcontent[checkMethod] = 'checkOverdrive'
 
 history[label] = 'Search History'
 history[route] = 'search-history'
 history[icon] = 'search'
+history[checkMethod] = 'checkHistory'
 
 logout[label] = 'Log Out'
 logout[route] = 'myresearch-logout'
 logout[icon] = 'sign-out'
+logout[checkMethod] = 'checkLogout'
