--- a/module/VuFind/tests/fixtures/configs/yaml/config/vufind/yamlreader-child.yaml
+++ b/module/VuFind/tests/fixtures/configs/yaml/config/vufind/yamlreader-child.yaml
@@ -2,6 +2,7 @@
 "@merge_sections":
   - [Other, Merged]
   - [Other, ParentOnly]
+  - [Other, Replaced]
 
 Overridden:
   Original: Not so original
@@ -12,6 +13,9 @@ Other:
     Child:
       - Foo
       - Baz
+  Replaced:
+    Original: Replaces parent
+    ChildOnly: From child
   NonMerged:
     Original: Not so original either
 ChildOnly:
