Fix merge recursive for boolean values

--- a/module/VuFind/tests/fixtures/configs/yaml/config/vufind/yamlreader-child.yaml
+++ b/module/VuFind/tests/fixtures/configs/yaml/config/vufind/yamlreader-child.yaml
@@ -15,6 +15,7 @@ Other:
       - Baz
   Replaced:
     Original: Replaces parent
+    Boolean: false
     ChildOnly: From child
   NonMerged:
     Original: Not so original either
