Minor adjustment to wording.

--- a/config/vufind/AccountMenu.ini
+++ b/config/vufind/AccountMenu.ini
@@ -1,5 +1,4 @@
-; If there are no items, or this file is even not used. VuFind uses default settings - which is same as you can see
-; below.
+; If this file is empty or missing, default settings will be used, matching the examples provided below.
 ; The format of this configuration is as follows:
 ; config key is a name of an item
 ; array keys for every menu item could be:
