Minor documentation tweaks.

--- a/config/vufind/AccountMenu.ini
+++ b/config/vufind/AccountMenu.ini
@@ -1,11 +1,12 @@
-; If this file is empty or missing, default settings will be used, matching the examples provided below.
-; The format of this configuration is as follows:
+; If this file is empty or missing, default settings will be used, matching
+; the examples provided below. The format of this configuration is as follows:
 ; config key is a name of an item
 ; array keys for every menu item could be:
 ;   - label: the text shown as link, will be translated - required
 ;   - route: route name used to generate link target - required
 ;   - icon: icon used for the item, has to be defined in theme config
-;   - checkMethod: the name of view helper AccountMenu method to perform a check whether to show the item
+;   - checkMethod: the name of an AccountMenu view helper method to perform
+;     a check whether to show the item. If omitted, item will always display.
 ;   - status: whether to show status label, defaults to false
 ;   - iconMethod: method to dynamically create the icon name
 [MenuItems]
