--- a/config/vufind/AccountMenu.ini
+++ b/config/vufind/AccountMenu.ini
@@ -5,10 +5,11 @@
 ;   - label: the text shown as link, will be translated - required
 ;   - route: route name used to generate link target - required
 ;   - icon: icon used for the item, has to be defined in theme config
+;   - iconMethod: method to dynamically create the icon name; ignored when
+;     icon is explicitly set.
 ;   - checkMethod: the name of an AccountMenu view helper method to perform
 ;     a check whether to show the item. If omitted, item will always display.
 ;   - status: whether to show status label, defaults to false
-;   - iconMethod: method to dynamically create the icon name
 [MenuItems]
 favorites[label] = 'Favorites'
 favorites[route] = 'myresearch-favorites'
