Update config example.

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -623,7 +623,7 @@ username_hint = username_only_letters_numbers_and_basic_punctuation
 ; Default email subject will be the translation for
 ; "persistent_login_warning_email_subject" and any custom value used here
 ; will also be run through the translator.
-;persistent_login_warning_email_subject = "Alert: Suspicious login detected"
+;persistent_login_warning_email_subject = "%%title%%: Invalid login attempt detected"
 
 ; See the comments in library/VF/Auth/MultiAuth.php for full details
 ; on using multiple authentication methods.  Note that MultiAuth assumes login
