--- a/build.xml
+++ b/build.xml
@@ -567,6 +567,28 @@
     <append destFile="${localdir}/languages/Facets/en.ini" text="0/level1z/ = Top Level, Sorted First${line.separator}" />
     <append destFile="${localdir}/languages/Facets/en.ini" text="1/level1z/level2y/ = Second Level, Sorted Last${line.separator}" />
     <append destFile="${localdir}/languages/Facets/en.ini" text="1/level1z/level2z/ = Second Level, Sorted First${line.separator}" />
+
+    <!-- Add templates to a minktest theme for tests -->
+    <property name="themedir" value="${srcdir}/themes/minktest" />
+    <property name="contentdir" value="${themedir}/templates/content" />
+    <if>
+      <not>
+        <available file="${contentdir}/test/sub" type="dir" />
+      </not>
+      <then>
+        <mkdir dir="${contentdir}/test/sub" />
+      </then>
+    </if>
+    <echo file="${themedir}/theme.config.php">&lt;?php
+return [
+    'extends' =&gt; 'sandal',
+];
+</echo>
+    <echo file="${contentdir}/test.phtml">&lt;h1&gt;MAIN LEVEL TEST&lt;/h1&gt;</echo>
+    <echo file="${contentdir}/test_fi.phtml">&lt;h1&gt;FINNISH TEST&lt;/h1&gt;</echo>
+    <echo file="${contentdir}/test/test.phtml">&lt;h1&gt;SUB LEVEL PHTML&lt;/h1&gt;</echo>
+    <echo file="${contentdir}/test/testmd.md"># SUB LEVEL MD</echo>
+    <echo file="${contentdir}/test/sub/test.phtml">&lt;h1&gt;SUB SUB LEVEL PHTML&lt;/h1&gt;</echo>
   </target>
 
   <target name="setup_database" description="setup demo database">
@@ -792,6 +814,7 @@ ${git_status}
         <include name="**/*" />
       </fileset>
     </delete>
+    <delete dir="${srcdir}/themes/minktest" />
     <delete file="${srcdir}/env.bat" />
     <delete file="${srcdir}/env.sh" />
     <delete file="${localdir}/import/import.properties" />
