--- a/themes/bootstrap3/package.json
+++ b/themes/bootstrap3/package.json
@@ -9,6 +9,8 @@
     "chart.js": "^4.4.0",
     "simple-keyboard": "^3.6.0",
     "simple-keyboard-layouts": "^3.0.0",
-    "vanilla-cookieconsent": "3.0.0"
+    "vanilla-cookieconsent": "3.0.0",
+    "datatables.net-dt": "1.13.11",
+    "datatables.net-rowreorder": "1.3.3"
   }
 }
