--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -547,7 +547,7 @@ ils_encryption_key = false
 ; You can use openssl_get_cipher_methods() to see available options on your system.
 ; Common choices: blowfish (deprecated -- do not use), aes (recommended), cast, sm4
 ; If you want to convert from one algorithm to another, run this from $VUFIND_HOME:
-;   php public/index.php util switch_db_hash oldhash:oldkey (or none) newhash:newkey
+;   php public/index.php util switch_db_hash new_algorithm new_key
 ils_encryption_algo = "aes"
 
 ; This setting may optionally be uncommented to restrict the email domain(s) from
