Fix accidental commit.

--- a/config/vufind/Demo.ini
+++ b/config/vufind/Demo.ini
@@ -68,10 +68,7 @@ services[] = 'custom'
 ; Demo driver. If it is uncommented, only usernames and passwords listed here
 ; will be recognized for ILS login. If it is commented out, all username/password
 ; combinations will be accepted.
-[Users]
-foo = foo1
-bar = bar1
-xyzzy = xyzzy1
+;[Users]
 ;user1 = "password1"
 ;user2 = "password2"
 
