--- a/themes/bootstrap5/package.json
+++ b/themes/bootstrap5/package.json
@@ -6,10 +6,11 @@
   },
   "dependencies": {
     "@popperjs/core": "2.11.8",
-    "autocomplete.js": "vufind-org/autocomplete.js#v2.1.7",
+    "autocomplete.js": "vufind-org/autocomplete.js#v2.1.9",
     "bootstrap": "5.3.2",
+    "chart.js": "^4.4.0",
     "simple-keyboard": "^3.6.0",
     "simple-keyboard-layouts": "^3.0.0",
-    "vanilla-cookieconsent": "3.0.0-rc.16"
+    "vanilla-cookieconsent": "3.0.0"
   }
 }
