--- a/config/vufind/AccountMenu.yaml
+++ b/config/vufind/AccountMenu.yaml
@@ -13,7 +13,7 @@
 
 MenuItems:
   - name: favorites
-    label: all_saved_items
+    label: saved_items
     route: myresearch-favorites
     icon: user-favorites
     checkMethod: checkFavorites
