Make attributes configurable

--- a/config/vufind/OpenIDConnect.ini
+++ b/config/vufind/OpenIDConnect.ini
@@ -3,3 +3,7 @@ url = "openidconnect.provider.url"
 client_id = "your_client_id"
 client_secret = "your_client_secret"
 
+; Attributes mapping in case of IdP using some non-standard/additional attributes
+;attributes[firstname] = given_name
+;attributes[lastname] = family_name
+;attributes[email] = email
