--- a/themes/bootstrap3/package.json
+++ b/themes/bootstrap3/package.json
@@ -7,10 +7,10 @@
   "dependencies": {
     "autocomplete.js": "vufind-org/autocomplete.js#v2.1.9",
     "chart.js": "^4.4.0",
+    "datatables.net-dt": "1.13.11",
+    "datatables.net-rowreorder": "1.3.3",
     "simple-keyboard": "^3.6.0",
     "simple-keyboard-layouts": "^3.0.0",
-    "vanilla-cookieconsent": "3.0.0",
-    "datatables.net-dt": "1.13.11",
-    "datatables.net-rowreorder": "1.3.3"
+    "vanilla-cookieconsent": "3.0.0"
   }
 }
