Minor comment reorganization.

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -450,7 +450,8 @@ force_first_scheduled_email = false
 ;scheduled_search_frequencies[7] = schedule_weekly
 
 ; This section allows you to determine how the users will authenticate.
-; You can use one or more of the following options:
+[Authentication]
+; You can authenticate using one or more of the following methods:
 ; - AlmaDatabase (combination of VuFind database and Alma account; see also Alma.ini)
 ; - CAS (see also [CAS] section)
 ; - Database: VuFind's internal user database
@@ -477,7 +478,6 @@ force_first_scheduled_email = false
 ; Also note that the Email method stores hashes in your database's auth_hash table.
 ; You should run the "php $VUFIND_HOME/public/index.php util expire_auth_hashes"
 ; utility periodically to clean out old data in this table.
-[Authentication]
 method = Database
 
 ; This setting only applies when method is set to ILS.  It determines which
