--- a/config/vufind/OAuth2Server.yaml
+++ b/config/vufind/OAuth2Server.yaml
@@ -135,25 +135,26 @@ Scopes:
       - library_user_id
 
 # Mappings from claim id to VuFind user or patron profile fields.
-# Claims can be any of the user (database row) or ILS profile fields or one of the
-# following:
+# Claims can be mapped to any of the user entity methods or ILS profile fields or one
+# of the following:
 # - full_name     User's full name
+# - age           User's age in years
 # - block_status  Whether the user has blocks in ILS (true/false or null if unknown)
 # - address_json  Address fields in JSON (see
 #                 https://openid.net/specs/openid-connect-core-1_0.html#AddressClaim)
-# - cat_username_hash  A unique hash of user's cat_username (typically library card
-#                      number but can be e.g. an email as well). The field is padded
-#                      with encyptionKey before hashing.
+# - library_user_id_hash A unique hash of cat_id or getCatUsername (typically library
+#                        card number but can be e.g. an email as well). The field is
+#                        padded with hashSalt before hashing.
 #
 ClaimMappings:
-  id: id
-  name: full_name # special field created from firstname + ' ' + lastname
-  given_name: firstname
-  family_name: lastname
-  email: email
+  id: getId
+  name: full_name # special field created from getFirstname + ' ' + getLastname
+  given_name: getFirstname
+  family_name: getLastname
+  email: getEmail
   age: age
   birthdate: birthdate
-  locale: last_language
+  locale: getLastLanguage
   phone: phone
   address: address_json # special field including all address fields
   block_status: block_status # special field indicating whether the patron has blocks
