Apply upstream changes to bootstrap5.

--- a/themes/bootstrap5/package.json
+++ b/themes/bootstrap5/package.json
@@ -9,6 +9,7 @@
     "autocomplete.js": "vufind-org/autocomplete.js#v2.1.9",
     "bootstrap": "5.3.2",
     "chart.js": "^4.4.0",
+    "jquery": "^3.7.1",
     "simple-keyboard": "^3.6.0",
     "simple-keyboard-layouts": "^3.0.0",
     "vanilla-cookieconsent": "3.0.0"
