--- a/config/vufind/Notifications.yaml
+++ b/config/vufind/Notifications.yaml
@@ -10,14 +10,14 @@ Notifications:
   # Add more by specifying a name ("success") ad the two colors for the box.
   broadcast_types:
     success:
-      color: "#E2EEDA"
+      background_color: "#E2EEDA"
       border_color: "#74B566"
     info:
-      color: "#DDECF6"
+      background_color: "#DDECF6"
       border_color: "#75BFDB"
     warning:
-      color: "#FBF8E5"
+      background_color: "#FBF8E5"
       border_color: "#E7AF5F"
     danger:
-      color: "#EFDFDE"
+      background_color: "#EFDFDE"
       border_color: "#C95C54"
