--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -1698,6 +1698,11 @@ expand  = true
 ;  by ignoring the more complicated 'shingle' (mini phrases)
 ;  based dictionary.
 simple = false
+; Override the list of spellcheck dictionaries used in a Solr query.
+; If this is set, 'simple' is ignored.
+; Note: The dictionary 'direct' should be used if solrconfig.xml is set to
+; use solr.DirectSolrSpellChecker.
+;dictionaries[] = direct
 ; This setting skips spell checking for purely numeric searches; spelling
 ; suggestions on searches for ISBNs and OCLC numbers are not generally very
 ; useful.
