--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -904,9 +904,12 @@ verify_server_certificate = false
 ; Required: CAS logout URL.
 ;logout                = https://cas.myuniversity.edu/cas/logout
 
-; Optional: CAS logging.
-;debug              = false
-;log                = /tmp/casdebug
+; Optional : CAS client base URL. If omitted, [Site][url] will be used
+;service_base_url[]    = "https://vufind.myuniversity.edu"
+;service_base_url[]    = "http://vufind.myuniversity.edu"
+
+; Optional: CAS logging, forwarded to [Logging]
+;debug                 = false
 
 ; Optional: URL to forward to after CAS login (if omitted,
 ; defaultLoggedInModule from [Site] section will be used).
