Enable the use of custom renewal block messages in KohaRest.ini driver
- Introduce ability for libraries to define renewal block messages
  specific to different Koha types in their KohaRest.ini file.

- Default to the hardcoded mapRenewalBlockReason if [ItypeRenewalBlockMappings] item type custom message is not defined in the local KohaRest.ini override

Sponsored-by: Auckland University of Technology (AUT)

--- a/config/vufind/KohaRest.ini
+++ b/config/vufind/KohaRest.ini
@@ -177,3 +177,9 @@ extraFields = item-issue:acceptTerms:pickUpLocation
 ; to disable it:
 ;purgeAll = false
 
+; This section allows libraries to define custom renewal block messages for specific item types.
+; The first string is the item type. In the below example, ILL.
+; The second string after the equal sign is the Koha returned renewal block reason
+; A colon delineates it from the renewal block message to display in VuFind.
+[ItypeRenewalBlockMappings]
+; ILL ="too_many:ill_message"
