Remove 'simple' from config.ini

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -1694,14 +1694,17 @@ limit   = 3
 phrase = false
 ; Offer expansions on terms as well as basic replacements
 expand  = true
-; Turning on 'simple' spell checking will improve performance,
-;  by ignoring the more complicated 'shingle' (mini phrases)
-;  based dictionary.
-simple = false
-; Override the list of spellcheck dictionaries used in a Solr query.
-; If this is set, 'simple' is ignored.
-; Note: The dictionary 'direct' should be used if solrconfig.xml is set to
-; use solr.DirectSolrSpellChecker.
+; Set the list of spellcheck dictionaries used in a Solr query. The
+; available dictionaries are defined in solrconfig.xml.
+; To replicate the legacy 'simple' option, to improve performance by ignoring
+; the more complicated 'shingle' (mini phrases) based dictionary, disable
+; 'default' to use only 'basicSpell'.
+; To use Solr's DirectSolrSpellCheck dictionary, enable 'direct' and
+; disable the others.
+; See https://solr.apache.org/guide/solr/latest/query-guide/spell-checking.html
+; for configuration of solrconfig.xml spellcheck parameters.
+dictionaries[] = default
+dictionaries[] = basicSpell
 ;dictionaries[] = direct
 ; This setting skips spell checking for purely numeric searches; spelling
 ; suggestions on searches for ISBNs and OCLC numbers are not generally very
