--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -1699,7 +1699,7 @@ expand  = true
 ; To replicate the legacy 'simple' option, to improve performance by ignoring
 ; the more complicated 'shingle' (mini phrases) based dictionary, disable
 ; 'default' to use only 'basicSpell'.
-; To use Solr's DirectSolrSpellCheck dictionary, enable 'direct' and
+; To use Solr's DirectSolrSpellChecker dictionary, enable 'direct' and
 ; disable the others.
 ; See https://solr.apache.org/guide/solr/latest/query-guide/spell-checking.html
 ; for configuration of solrconfig.xml spellcheck parameters.
