Remove reference to 'simple'

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -1696,9 +1696,8 @@ phrase = false
 expand  = true
 ; Set the list of spellcheck dictionaries used in a Solr query. The
 ; available dictionaries are defined in solrconfig.xml.
-; To replicate the legacy 'simple' option, to improve performance by ignoring
-; the more complicated 'shingle' (mini phrases) based dictionary, disable
-; 'default' to use only 'basicSpell'.
+; To improve performance by ignoring the more complicated 'shingle' (mini
+; phrases) based dictionary, disable 'default' to use only 'basicSpell'.
 ; To use Solr's DirectSolrSpellChecker dictionary, enable 'direct' and
 ; disable the others.
 ; See https://solr.apache.org/guide/solr/latest/query-guide/spell-checking.html
