missing config item

--- a/config/vufind/Overdrive.ini
+++ b/config/vufind/Overdrive.ini
@@ -41,6 +41,10 @@ consortiumSupport = false
 ; page down.
 enableAjaxStatus = true
 
+;Your online url.  This is used to create permanent links to Overdrive resources. 
+; usually https://yourlibrary.overdrive.com. If blank no link will be displayed
+overdriveLibraryURL = ""
+
 [API]
 ; You should only have to change these top 5 in most cases. These
 ; values should be supplied to you by the Overdrive API support team.
