added configuration for hold suspensions, more escaping in templates, fix formatting

--- a/config/vufind/Overdrive.ini
+++ b/config/vufind/Overdrive.ini
@@ -45,6 +45,15 @@ enableAjaxStatus = true
 ; usually https://yourlibrary.overdrive.com. If blank no link will be displayed
 overdriveLibraryURL = ""
 
+;Suspend Hold Durations. The options in days for which a user can suspend a hold.
+suspendDurations[] = 7
+suspendDurations[] = 14
+suspendDurations[] = 21
+suspendDurations[] = 28
+suspendDurations[] = 60
+suspendDurations[] = 90
+suspendDurations[] = 180
+
 [API]
 ; You should only have to change these top 5 in most cases. These
 ; values should be supplied to you by the Overdrive API support team.
