Fix/reinstate showOverdriveAdminMenu setting.

--- a/config/vufind/Overdrive.ini
+++ b/config/vufind/Overdrive.ini
@@ -26,8 +26,8 @@ showMyContent = "never"
 ; messages that come from the API will result in an account problem type message.
 noAccessString = ""
 
-;link to overdrive help (by default on the Overdrive Content page.). 
-;put the full URL (or false to disable it) ex: https://help.overdrive.com
+; link to overdrive help (by default on the Overdrive Content page.).
+; put the full URL (or false to disable it) ex: https://help.overdrive.com
 ODHelpLink = "https://help.overdrive.com"
 
 ; Enable Consortium Support (true/false). Enable this if this VuFind instance is
@@ -41,11 +41,11 @@ consortiumSupport = false
 ; page down.
 enableAjaxStatus = true
 
-;Your online url.  This is used to create permanent links to Overdrive resources. 
+; Your online url.  This is used to create permanent links to Overdrive resources.
 ; usually https://yourlibrary.overdrive.com. If blank no link will be displayed
 overdriveLibraryURL = ""
 
-;Suspend Hold Durations. The options in days for which a user can suspend a hold.
+; Suspend Hold Durations. The options in days for which a user can suspend a hold.
 suspendDurations[] = 7
 suspendDurations[] = 14
 suspendDurations[] = 21
@@ -53,6 +53,9 @@ suspendDurations[] = 28
 suspendDurations[] = 60
 suspendDurations[] = 90
 suspendDurations[] = 180
+
+; Should we display Overdrive information in the Admin module?
+showOverdriveAdminMenu = false
 
 [API]
 ; You should only have to change these top 5 in most cases. These
