Fix case of OverDrive in comments.

--- a/config/vufind/Overdrive.ini
+++ b/config/vufind/Overdrive.ini
@@ -1,32 +1,32 @@
 [Overdrive]
 ; are your records in Marc format? If true, then the driver will mostly default
 ; to Marc templates. If false, then the driver will assume your records come from
-; Overdrive.
+; OverDrive.
 isMarc = false;
 
 ; (if isMarc is true) The marc field/subfield that has the overdriveID
 overdriveIdMarcField = "037"
 overdriveIdMarcSubfield = "a"
 
-; When to show the Overdrive Content link in the MyResearch Menu. (see noAccessString
+; When to show the OverDrive Content link in the MyResearch Menu. (see noAccessString
 ; below).
 ; Note: if you choose accessOnly then the menu item will be hidden when the
-; noAccessString is returned from Overdrive's authentication API. In this case "no
-; access" means the patron type should not have access to Overdrive, not that there
+; noAccessString is returned from OverDrive's authentication API. In this case "no
+; access" means the patron type should not have access to OverDrive, not that there
 ; is a temporary problem like an expired card. Options:
 ; - always: show the menu item.
-; - accessOnly: only show if the patron has access to overdrive
+; - accessOnly: only show if the patron has access to OverDrive
 ; - never: never show the item(default)
 showMyContent = "never"
 
-; A substring to check for in the message that Overdrive returns when a patron
-; account does not have access to Overdrive. This string will probably be coming
+; A substring to check for in the message that OverDrive returns when a patron
+; account does not have access to OverDrive. This string will probably be coming
 ; from your ILS or your own authentication API. You may want to change the message
 ; that gets displayed in the language translation files when this happens. Other
 ; messages that come from the API will result in an account problem type message.
 noAccessString = ""
 
-; link to overdrive help (by default on the Overdrive Content page.).
+; link to OverDrive help (by default on the OverDrive Content page.).
 ; put the full URL (or false to disable it) ex: https://help.overdrive.com
 ODHelpLink = "https://help.overdrive.com"
 
@@ -41,7 +41,7 @@ consortiumSupport = false
 ; page down.
 enableAjaxStatus = true
 
-; Your online url.  This is used to create permanent links to Overdrive resources.
+; Your online url.  This is used to create permanent links to OverDrive resources.
 ; usually https://yourlibrary.overdrive.com. If blank no link will be displayed
 overdriveLibraryURL = ""
 
@@ -54,12 +54,12 @@ suspendDurations[] = 60
 suspendDurations[] = 90
 suspendDurations[] = 180
 
-; Should we display Overdrive information in the Admin module?
+; Should we display OverDrive information in the Admin module?
 showOverdriveAdminMenu = false
 
 [API]
 ; You should only have to change these top 5 in most cases. These
-; values should be supplied to you by the Overdrive API support team.
+; values should be supplied to you by the OverDrive API support team.
 clientKey = "YOURLIBKEY"
 clientSecret = "yourclientsecret"
 productionLibraryID = ""
