--- a/config/vufind/Overdrive.ini
+++ b/config/vufind/Overdrive.ini
@@ -19,6 +19,9 @@ overdriveIdMarcSubfield = "a"
 ; - never: never show the item(default)
 showMyContent = "never"
 
+; Whether to show the Overdrive API Troubleshooting menu item in the Admin Menu
+showOverdriveAdminMenu = false
+
 ; A substring to check for in the message that OverDrive returns when a patron
 ; account does not have access to OverDrive. This string will probably be coming
 ; from your ILS or your own authentication API. You may want to change the message
@@ -53,9 +56,6 @@ suspendDurations[] = 28
 suspendDurations[] = 60
 suspendDurations[] = 90
 suspendDurations[] = 180
-
-; Should we display OverDrive information in the Admin module?
-showOverdriveAdminMenu = false
 
 [API]
 ; You should only have to change these top 5 in most cases. These
