--- a/config/vufind/Overdrive.ini
+++ b/config/vufind/Overdrive.ini
@@ -19,7 +19,7 @@ overdriveIdMarcSubfield = "a"
 ; - never: never show the item(default)
 showMyContent = "never"
 
-; Whether to show the Overdrive API Troubleshooting menu item in the Admin Menu
+; Whether to show the OverDrive API Troubleshooting menu item in the Admin Menu
 showOverdriveAdminMenu = false
 
 ; A substring to check for in the message that OverDrive returns when a patron
