CSP: Generate current Report-To header

--- a/config/vufind/contentsecuritypolicy.ini
+++ b/config/vufind/contentsecuritypolicy.ini
@@ -62,6 +62,25 @@ img-src[] = "'self'"
 ;img-src[] = https://cache3.obalkyknih.cz
 font-src[] = "'self'"
 base-uri[] = "'self'"
-; Set URI that the browser should use to report CSP violation; you should provide
-; this URL when you enable report_only mode to capture the violations.
-;report-to[] = 'https://example.report-uri.com'
+
+; Provide both report-uri and report-to headers to capture CSP violations.  Each is supported
+; by different browsers.  See
+; https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Security-Policy/report-uri
+; 
+; Set URI that some browsers use to report CSP violation.
+;report-uri[] = 'https://example.report-uri.com'
+; Set the named endpoint that other borwsers use to report CSP violations.  The endpoint name
+; should match a group name in ReportTo below.
+;report-to[] = 'CSPReportingEndpoint'
+
+; Define the Report-To response header endpoint groups.  See
+; https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Security-Policy/report-to
+;[ReportTo]
+;groups[] = 'CSPReportingEndpoint'
+
+; Define each endpoint group named in ReportTo above.
+;[ReportToCSPReportingEndpoint]
+; Maximum seconds to use this reporting endpoint
+;max_age = 10886400
+; URL(s) for this reporting endpoint
+;endpoints_url[] = 'https://example.report-uri.com'
