Change default max_age to match

--- a/config/vufind/contentsecuritypolicy.ini
+++ b/config/vufind/contentsecuritypolicy.ini
@@ -80,7 +80,7 @@ base-uri[] = "'self'"
 
 ; Define each endpoint group named in ReportTo above.
 ;[ReportToCSPReportingEndpoint]
-; Maximum seconds to use this reporting endpoint
-;max_age = 10886400
+; Maximum seconds to use this reporting endpoint.  Default (86400) is one day.
+;max_age = 86400
 ; URL(s) for this reporting endpoint
 ;endpoints_url[] = 'https://example.report-uri.com'
